src/test/resources/semantic_errors/printString_with_bool_call.notc
bool returnsBool() {
    return true;
}

void main() {
    printString(returnsBool);
}
